--- a/requirements.txt
+++ b/requirements.txt
@@ -37,3 +37,4 @@ tornado==6.5.4
 typing_extensions==4.15.0
 tzdata==2025.3
 urllib3==2.6.2
+python-dotenv==1.0.1 #Does not read .env file by default
